// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResourceLink renders with a resource and container 1`] = `
<DocumentFragment>
  <a
    href="/resource/https%3A%2F%2Fmypod.myhost.com"
  >
    Text
  </a>
</DocumentFragment>
`;

exports[`ResourceLink renders with a resource, container, and action 1`] = `
<DocumentFragment>
  <a
    href="/resource/https%3A%2F%2Fmypod.myhost.com?action=myAction&resourceIri=https%3A%2F%2Fmypod.myhost.com%2Fresource"
  >
    Text
  </a>
</DocumentFragment>
`;
